--- a/akce.html
+++ b/akce.html
@@ -13,9 +13,9 @@
         <h1>FCL Bar</h1>
         <nav>
             <ul>
-                <li><a href="#home">Domů</a></li>
-                <li><a href="pronajem.html">Pronájem</a></li>
+                <li><a href="index.html">Domů</a></li>
                 <li><a href="akce.html">Akce</a></li>
+                <li><a href="rezervace.html">Rezervace</a></li>
                 <li><a href="galerie.html">Galerie</a></li>
                 <li><a href="kontakt.html">Kontakt</a></li>
             </ul>
@@ -28,7 +28,7 @@
 
     <footer>
         <p>&copy; 2023 FCL Bar. Všechna práva vyhrazena. Poslední aktualizace: 15.11.2023</p>
-        <p>Kontakt: fclbar@gmail.com</p>
+        <p>Kontakt: info@fclbar.cz  +420 123 456 789</p>
     </footer>
 </body>
 
