--- a/galerie.html
+++ b/galerie.html
@@ -13,9 +13,9 @@
         <h1>FCL Bar</h1>
         <nav>
             <ul>
-                <li><a href="#home">Domů</a></li>
-                <li><a href="pronajem.html">Pronájem</a></li>
+                <li><a href="index.html">Domů</a></li>
                 <li><a href="akce.html">Akce</a></li>
+                <li><a href="rezervace.html">Rezervace</a></li>
                 <li><a href="galerie.html">Galerie</a></li>
                 <li><a href="kontakt.html">Kontakt</a></li>
             </ul>
@@ -23,12 +23,23 @@
     </header>
 
     <main>
-       
+        <h1>Fotogalerie</h1>
+
+        <p>Podívejte se na několik momentů z našeho baru ve FCL Baru. Doufáme, že vás naše atmosféra osloví a těšíme se, až vás uvidíme u nás!</p><br/>
+    
+        <div class="galerie">
+            <img src="imgs/gallery/bar (1).jpg" alt="Popis obrázku 1">
+            <img src="imgs/gallery/bar (2).jpg" alt="Popis obrázku 1"> 
+            <img src="imgs/gallery/bar (3).jpg" alt="Popis obrázku 1"> 
+            <img src="imgs/gallery/bar (4).jpg" alt="Popis obrázku 1"> 
+            <img src="imgs/gallery/bar (5).jpg" alt="Popis obrázku 1">             
+            <img src="imgs/gallery/bar (6).jpg" alt="Popis obrázku 1"> 
+        </div>
     </main>
 
     <footer>
-        <p>&copy; 2023 FCL Bar. Všechna práva vyhrazena. Poslední aktualizace: 15.11.2023</p>
-        <p>Kontakt: fclbar@gmail.com</p>
+        <p>&copy; 2023 FCL Bar. Všechna práva vyhrazena. Poslední aktualizace: 14.11.2023</p>
+        <p>Kontakt: info@fclbar.cz  +420 123 456 789</p>
     </footer>
 </body>
 
