--- a/kontakt.html
+++ b/kontakt.html
@@ -13,9 +13,9 @@
         <h1>FCL Bar</h1>
         <nav>
             <ul>
-                <li><a href="#home">Domů</a></li>
-                <li><a href="pronajem.html">Pronájem</a></li>
+                <li><a href="index.html">Domů</a></li>
                 <li><a href="akce.html">Akce</a></li>
+                <li><a href="rezervace.html">Rezervace</a></li>
                 <li><a href="galerie.html">Galerie</a></li>
                 <li><a href="kontakt.html">Kontakt</a></li>
             </ul>
@@ -23,12 +23,33 @@
     </header>
 
     <main>
-       
+        <h1>Kontaktujte nás</h1>
+
+    <p>Rádi bychom vám poskytli co nejlepší služby a odpověděli na vaše otázky. Pokud máte nějaký dotaz, neváhejte nás kontaktovat.</p>
+
+    <h2>Naše kontaktní informace:</h2>
+    <p><strong>Adresa:</strong> Ulice 123, Město, PSČ</p>
+    <p><strong>Telefonní číslo:</strong> +420 123 456 789</p>
+    <p><strong>E-mail:</strong> info@fclbar.cz</p>
+
+    <h2>Otevírací doba:</h2>
+    <p><strong>Neděle - Čtvrtek:</strong> 16:00 - 00:00</p>
+    <p><strong>Pátek - Sobota:</strong> 20:00 - 04:00</p>
+
+    <h2>Najdete nás také na sociálních sítích:</h2>
+        <a href="https://www.facebook.com"><img src="styles/imgs/fbicon.png" alt="Facebook" width="50rem"></a>   
+        <a href="https://www.instagram.com"><img src="styles/imgs/igicon.png" alt="Instagram" width="50rem"></a>
+
+    <h2>Mapa:</h2>
+    <iframe
+            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3036.969532408889!2d15.82871855868181!3d50.202704976655355!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x470c2b3387ae60bd%3A0x8365ae5997d44176!2sFakulta%20informatiky%20a%20managementu%20Univerzity%20Hradec%20Kr%C3%A1lov%C3%A9!5e0!3m2!1scs!2scz!4v1699916021587!5m2!1scs!2scz"
+            width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"
+            referrerpolicy="no-referrer-when-downgrade"></iframe>        
     </main>
 
     <footer>
         <p>&copy; 2023 FCL Bar. Všechna práva vyhrazena. Poslední aktualizace: 15.11.2023</p>
-        <p>Kontakt: fclbar@gmail.com</p>
+        <p>Kontakt: info@fclbar.cz  +420 123 456 789</p>
     </footer>
 </body>
 
