--- a/index.html
+++ b/index.html
@@ -23,7 +23,74 @@
     </header>
 
     <main>
-       
+        <h2>Vítejte v FCL Baru - Místě pro unikátní zážitky</h2>
+        <p>Jsme FCL Bar, vaše brána do světa jedinečných chutí, skvělé atmosféry a nezapomenutelných večerů. Nacházíme se v srdci města, kde se spojují lidé hledající výjimečné nápoje, špičkovou hudbu a neformální prostředí pro relaxaci a zábavu.</p>
+
+        <h2>Naše Historie</h2>
+        <p>FCL Bar má svou vlastní cestu, která se začala psát s vášní pro kvalitní nápoje, společenskou zábavu a příjemné posezení teprve před pár lety. Od té doby jsme se stali symbolem společenského života a místa setkávání pro lidi, kteří oceňují příjemné prostory a kvalitní hudbu.</p>
+
+        <h2>Naše Filozofie</h2>
+        <p>Zde věříme, že dobrý večer se nezačíná a nekončí jen sklenicí v ruce. Je to o spojení s přáteli, objevování nových chutí a užívání si každého okamžiku. Jsme tady, abychom vám přinesli ten správný mix, který váš večer udělá nezapomenutelným.
+        <br/>Přijďte se k nám podívat a nechte se unést atmosférou FCL Baru. Jsme připraveni vám nabídnout nejlepší zážitek, který si zasloužíte.</p><br/>
+
+        <h2>Ceník nealkoholických nápojů</h2>
+        <table>
+            <thead><tr><th>Nápoj</th><th>Cena</th><th>Velikost</th></tr></thead>
+            <tbody>
+                <tr>
+                    <td>Voda - perlivá, neperlivá</td>
+                    <td>49 Kč</td>
+                    <td>0,5l</td>
+                </tr>
+                <tr>
+                    <td>Coca-Cola</td>
+                    <td>59 Kč</td>
+                    <td>0,33l</td>
+                </tr>
+                <tr>
+                    <td>Fanta</td>
+                    <td>59 Kč</td>
+                    <td>0,33l</td>
+                </tr>
+                <tr>
+                    <td>Sprite</td>
+                    <td>59 Kč</td>
+                    <td>0,33l</td>
+                </tr>
+            </tbody>
+       </table>
+
+       <h2>Ceník alkoholických nápojů</h2>
+        <table>
+            <thead><tr><th>Nápoj</th><th>Cena</th><th>Velikost</th></tr></thead>
+            <tbody>
+                <tr>
+                    <td>AA</td>
+                    <td>AA</td>
+                    <td>AA</td>
+                </tr>
+                <tr>
+                    <td>AA</td>
+                    <td>AA</td>
+                    <td>AA</td>
+                </tr>
+                <tr>
+                    <td>AA</td>
+                    <td>AA</td>
+                    <td>AA</td>
+                </tr>
+                <tr>
+                    <td>AA</td>
+                    <td>AA</td>
+                    <td>AA</td>
+                </tr>
+                <tr>
+                    <td>AA</td>
+                    <td>AA</td>
+                    <td>AA</td>
+                </tr>
+            </tbody>
+       </table>
     </main>
 
     <footer>
