--- a/kontakt.html
+++ b/kontakt.html
@@ -37,13 +37,13 @@
     <p><strong>Pátek - Sobota:</strong> 20:00 - 04:00</p>
 
     <h2>Najdete nás také na sociálních sítích:</h2>
-        <a href="https://www.facebook.com"><img src="styles/imgs/fbicon.png" alt="Facebook" width="50rem"></a>   
-        <a href="https://www.instagram.com"><img src="styles/imgs/igicon.png" alt="Instagram" width="50rem"></a>
+        <a href="https://www.facebook.com"><img src="imgs/fbicon.png" alt="Facebook" width="50rem"></a>  
+        <a href="https://www.instagram.com"><img src="imgs/igicon.png" alt="Instagram" width="50rem"></a>
 
     <h2>Mapa:</h2>
     <iframe
             src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3036.969532408889!2d15.82871855868181!3d50.202704976655355!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x470c2b3387ae60bd%3A0x8365ae5997d44176!2sFakulta%20informatiky%20a%20managementu%20Univerzity%20Hradec%20Kr%C3%A1lov%C3%A9!5e0!3m2!1scs!2scz!4v1699916021587!5m2!1scs!2scz"
-            width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"
+            style="border:0;" allowfullscreen="" loading="lazy"
             referrerpolicy="no-referrer-when-downgrade"></iframe>        
     </main>
 
