--- a/index.html
+++ b/index.html
@@ -65,14 +65,14 @@
             <thead><tr><th>Nápoj</th><th>Cena</th><th>Velikost</th></tr></thead>
             <tbody>
                 <tr>
-                    <td>AA</td>
-                    <td>AA</td>
-                    <td>AA</td>
+                    <td>Gin & Tonic</td>
+                    <td>109Kč</td>
+                    <td>0,4L</td>
                 </tr>
                 <tr>
-                    <td>AA</td>
-                    <td>AA</td>
-                    <td>AA</td>
+                    <td>Rum & Cola</td>
+                    <td>99Kč</td>
+                    <td>0,4l</td>
                 </tr>
                 <tr>
                     <td>AA</td>
