--- a/index.html
+++ b/index.html
@@ -75,27 +75,27 @@
                     <td>0,4l</td>
                 </tr>
                 <tr>
-                    <td>AA</td>
-                    <td>AA</td>
-                    <td>AA</td>
+                    <td>Vodka & Džus</td>
+                    <td>99Kč</td>
+                    <td>0,4l</td>
                 </tr>
                 <tr>
-                    <td>AA</td>
-                    <td>AA</td>
-                    <td>AA</td>
+                    <td>Vodka & Redbull</td>
+                    <td>109Kč</td>
+                    <td>0,4l</td>
                 </tr>
                 <tr>
-                    <td>AA</td>
-                    <td>AA</td>
-                    <td>AA</td>
+                    <td>Jager & Redbull</td>
+                    <td>109Kč</td>
+                    <td>0,4l</td>
                 </tr>
             </tbody>
        </table>
     </main>
 
     <footer>
-        <p>&copy; 2023 FCL Bar. Všechna práva vyhrazena. Poslední aktualizace: 15.11.2023</p>
-        <p>Kontakt: info@fclbar.cz  +420 123 456 789</p>
+        <p>&copy; 2023 FCL Bar. Všechna práva vyhrazena. Poslední aktualizace: 25.11.2023</p>
+        <p>Kontakt: info@fclbar.cz  +420 123 456 789 &#40Studentský zápočtový projekt&#41</p>
     </footer>
 </body>
 
