--- a/kontakt.html
+++ b/kontakt.html
@@ -48,8 +48,8 @@
     </main>
 
     <footer>
-        <p>&copy; 2023 FCL Bar. Všechna práva vyhrazena. Poslední aktualizace: 15.11.2023</p>
-        <p>Kontakt: info@fclbar.cz  +420 123 456 789</p>
+        <p>&copy; 2023 FCL Bar. Všechna práva vyhrazena. Poslední aktualizace: 25.11.2023</p>
+        <p>Kontakt: info@fclbar.cz  +420 123 456 789 &#40Studentský zápočtový projekt&#41</p>
     </footer>
 </body>
 
