--- a/galerie.html
+++ b/galerie.html
@@ -26,7 +26,7 @@
         <h1>Fotogalerie</h1>
 
         <p>Podívejte se na několik momentů z našeho baru ve FCL Baru. Doufáme, že vás naše atmosféra osloví a těšíme se, až vás uvidíme u nás!</p><br/>
-    
+
         <div class="galerie">
             <img src="imgs/gallery/bar (1).jpg" alt="Popis obrázku 1">
             <img src="imgs/gallery/bar (2).jpg" alt="Popis obrázku 1"> 
@@ -38,8 +38,8 @@
     </main>
 
     <footer>
-        <p>&copy; 2023 FCL Bar. Všechna práva vyhrazena. Poslední aktualizace: 14.11.2023</p>
-        <p>Kontakt: info@fclbar.cz  +420 123 456 789</p>
+        <p>&copy; 2023 FCL Bar. Všechna práva vyhrazena. Poslední aktualizace: 25.11.2023</p>
+        <p>Kontakt: info@fclbar.cz  +420 123 456 789 &#40Studentský zápočtový projekt&#41</p>
     </footer>
 </body>
 
